--- a/index.html
+++ b/index.html
@@ -6,24 +6,56 @@
   <title>Jnana Experiments</title>
   <style>
     body {
-      max-width: 720px;
+      max-width: 1000px;
       margin: 3rem auto;
       padding: 0 1rem;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       line-height: 1.6;
       background: #f9f9f9;
       color: #111;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+    main {
+      display: flex;
+      flex: 1;
+      gap: 2rem;
+    }
+    .content {
+      flex: 2;
+    }
+    .buttons {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      gap: 1rem;
+      margin-top: 1rem;
     }
     h1 {
       margin-bottom: 1rem;
-      text-align: center;
       color: #333;
     }
     p {
       margin: 1rem 0;
+      text-align: left;
+    }
+    .action-button {
+      background-color: #1a73e8;
+      color: white;
+      padding: 0.8rem 1.5rem;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      text-align: center;
+      transition: background-color 0.2s ease;
+    }
+    .action-button:hover {
+      background-color: #1558b0;
     }
     footer {
-      margin-top: 4rem;
+      margin-top: 3rem;
       font-size: 0.9rem;
       color: #555;
       border-top: 1px solid #ddd;
@@ -42,16 +74,29 @@
   </style>
 </head>
 <body>
-  <h1>Welcome</h1>
+  <main>
+    <!-- Left side content -->
+    <div class="content">
+      <h1>Welcome</h1>
 
-  <p>My father once ran a passion-project school where he taught Mathematics. It closed within a few years due to some unfortunate constraints of reality at that time. I was never a bright student in Mathematics (my high school teacher famously (well, famously in my childhood highlights) once threw my notebook out of class and asked me to get out, at which point my English professor told me, “You’re a writer, kid; you’ll be a great author someday.” Greatness remains elusive, but those words lifted me. Being an educator, mentor, or teacher is nothing short of magic that way).</p>
+      <p>My father once ran a passion-project school where he taught Mathematics. It closed within a few years due to some unfortunate constraints of reality at that time. I was never a bright student in Mathematics (my high school teacher famously (well, famously in my childhood highlights) once threw my notebook out of class and asked me to get out at which point my English professor told me, “You’re a writer, kid; you’ll be a great author someday.” Greatness remains elusive, but those words lifted me. Being an educator, mentor, or teacher is nothing short of magic that way).</p>
 
-  <p>I was probably a disappointment to my father then. Recently, we met one of his students randomly at a restaurant, and he praised my father’s excellent oratory skills. Amidst nostalgia, my father recalled soem unique details from my childhood that helped me accept a part of myself; the part that flits between projects, passions, and is forever passionately and relentlessly curious about everything.</p>
+      <p>I was probably a disappointment to my father then. Recently, we met one of his students randomly at a restaurant, and he praised my father’s excellent oratory skills. Amidst nostalgia, my father recalled soem unique details from my childhood that helped me accept a part of myself; the part that flits between projects, passions, and is forever passionately and relentlessly curious about everything.</p>
 
-  <p>My father’s passion project was called <em>jnanatutorials</em>. This is mine: <strong>jnanaexperiments</strong>.</p>
+      <p>My father’s passion project was called <em>jnanatutorials</em>. This is mine: <strong>jnanaexperiments</strong>.</p>
 
-  <p>Happy reading, fellow atoms. I hope it sparks a little joy and a lot of wonder. Thank you for your attention.</p>
+      <p>Happy reading, fellow atoms. I hope it sparks a little joy and a lot of wonder. Thank you for your attention.</p>
+    </div>
 
+    <!-- Right side buttons -->
+    <div class="buttons">
+      <a href="science.html" class="action-button">Science</a>
+      <a href="writer.html" class="action-button">Writer</a>
+      <a href="art.html" class="action-button">Art</a>
+    </div>
+  </main>
+
+  <!-- Footer -->
   <footer>
     <p>All original content on this site (including text, blog posts, and graphics) is licensed under the <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">Creative Commons Attribution-NonCommercial 4.0 International License (CC BY-NC 4.0)</a>.</p>
     <p>The website’s source code is licensed under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.</p>
