--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     body {
       max-width: 1000px;
-      margin: 3rem auto;
+      margin: 0 auto;
       padding: 0 1rem;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       line-height: 1.6;
@@ -17,33 +17,50 @@
       flex-direction: column;
       min-height: 100vh;
     }
+
+    header {
+      width: 100%;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    header img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px; /* optional: soft rounded corners */
+    }
+
     main {
       display: flex;
       flex: 1;
       gap: 2rem;
+      align-items: flex-start; /* aligns text and buttons at the top */
       flex-wrap: wrap;
     }
+
     .content {
       flex: 2;
       min-width: 280px;
     }
+
     .buttons {
       flex: 1;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
       gap: 1rem;
-      margin-top: 1rem;
       min-width: 200px;
     }
+
     h1 {
       margin-bottom: 1rem;
       color: #333;
     }
+
     p {
       margin: 1rem 0;
       text-align: left;
     }
+
     .action-button {
       background-color: #1a73e8;
       color: white;
@@ -54,9 +71,11 @@
       text-align: center;
       transition: background-color 0.2s ease;
     }
+
     .action-button:hover {
       background-color: #1558b0;
     }
+
     footer {
       margin-top: 3rem;
       font-size: 0.9rem;
@@ -67,10 +86,12 @@
       background: #f4f4f4;
       border-radius: 8px;
     }
+
     footer a {
       color: #1a0dab;
       text-decoration: none;
     }
+
     footer a:hover {
       text-decoration: underline;
     }
@@ -93,6 +114,11 @@
   </style>
 </head>
 <body>
+  <!-- Banner Image -->
+  <header>
+    <img src="banner.jpg" alt="Jnana Experiments Banner">
+  </header>
+
   <main>
     <!-- Left side content -->
     <div class="content">
