--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <body>
   <!-- Banner Image -->
   <header>
-    <img src="banner.jpg" alt="Jnana Experiments Banner">
+    <img src="banner.png" alt="Jnana Experiments Banner">
   </header>
 
   <main>
