--- a/index.html
+++ b/index.html
@@ -71,12 +71,19 @@
   </div>
 
   <main>
-    <h1>Welcome to Jnana Experiments</h1>
-    <p>This is my little corner of the web where I share science, writing, art, and rambles.</p>
+   <h1>Welcome</h1>
+
+      <p>My father once ran a passion-project school where he taught Mathematics. It closed within a few years due to some unfortunate constraints of reality at that time. I was never a bright student in Mathematics (my high school teacher famously (well, famously in my childhood highlights) once threw my notebook out of class and asked me to get out at which point my English professor told me, “You’re a writer, kid; you’ll be a great author someday.” Greatness remains elusive, but those words lifted me. Being an educator, mentor, or teacher is nothing short of magic that way).</p>
+
+      <p>I was probably a disappointment to my father then. Recently, we met one of his students randomly at a restaurant, and he praised my father’s excellent oratory skills. Amidst nostalgia, my father recalled soem unique details from my childhood that helped me accept a part of myself; the part that flits between projects, passions, and is forever passionately and relentlessly curious about everything.</p>
+
+      <p>My father’s passion project was called <em>jnanatutorials</em>. This is mine: <strong>jnanaexperiments</strong>.</p>
+
+      <p>Happy reading, fellow atoms. I hope it sparks a little joy and a lot of wonder. Thank you for your attention.</p>
   </main>
 
   <footer>
-    <p>© 2025 Jnana Experiments · All content under CC BY-NC 4.0 · Code under MIT</p>
+    <p>© 2025 Jnana Experiments · All content under CC BY-NC 4.0 · Code under MIT License</p>
   </footer>
 </body>
 </html>
