--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </head>
 <body>
   <header>
-    <img src="banner.png" alt="Site Banner">
+    <img src="ajnbanner.png" alt="Site Banner">
   </header>
 
   <div class="buttons">
