--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jnana Experiments</title>
+  <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell/nutshell.js"></script>
   <style>
     body {
       max-width: 1000px;
@@ -75,9 +76,9 @@
 
       <p>My father once ran a passion-project school where he taught Mathematics. It closed within a few years due to some unfortunate constraints of reality at that time. I was never a bright student in Mathematics (my high school teacher famously (well, famously in my childhood highlights) once threw my notebook out of class and asked me to get out, at which point my English professor told me, “You’re a writer, kid; you’ll be a great author someday.” Greatness remains elusive, but those words lifted me. Being an educator, mentor, or teacher is nothing short of magic that way).</p>
 
-      <p>I was probably a disappointment to my father then. Recently, we met one of his students randomly at a restaurant, and he praised my father’s excellent oratory skills. Amidst nostalgia, my father recalled soem unique details from my childhood that helped me accept a part of myself; the part that flits between projects, passions, and is forever passionately and relentlessly curious about everything.</p>
+      <p>I was probably a disappointment to my father then. Recently, we met one of his students randomly at a restaurant, and he praised my father’s excellent oratory skills. Amidst nostalgia, my father recalled some unique details from my childhood that helped me accept a part of myself; the part that flits between projects, passions, and is forever relentlessly curious about everything.</p>
 
-      <p>My father’s passion project was called <em>jnanatutorials</em>. This is mine: <strong>jnanaexperiments</strong>.</p>
+      <p>My father’s passion project was called <strong></strong><em>jnanatutorials</em></strong>. This is mine: <strong>jnanaexperiments</strong>.</p>
 
       <p>Happy reading, fellow atoms. I hope it sparks a little joy and a lot of wonder. Thank you for your attention.</p>
   </main>
