--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <main>
    <h1>Welcome</h1>
 
-      <p>My father once ran a passion-project school where he taught Mathematics. It closed within a few years due to some unfortunate constraints of reality at that time. I was never a bright student in Mathematics (my high school teacher famously (well, famously in my childhood highlights) once threw my notebook out of class and asked me to get out, at which point my English professor told me, <a href="https://tinyurl.com/bn92wsrn">:“You’re a writer, kid; you’ll be a great author someday.” </a> Greatness remains elusive, but those words lifted me. Being an educator, mentor, or teacher is nothing short of magic that way).</p>
+      <p>My father once ran a passion-project school where he taught Mathematics. It closed within a few years due to some unfortunate constraints of reality at that time. I was never a bright student in Mathematics (my high school teacher famously (well, famously in my childhood highlights) once threw my notebook out of class and asked me to get out, at which point my English professor told me, <a href="https://www.youtube.com/shorts/u-H19nwxPfU?app=desktop">:“You’re a writer, kid; you’ll be a great author someday.” </a> Greatness remains elusive, but those words lifted me. Being an educator, mentor, or teacher is nothing short of magic that way).</p>
 
       <p>So, I probably dissapointed him one too many times on that front, atleast at that time. Recently, we met one of his students randomly at a restaurant, and he praised my father’s excellent oratory skills. Amidst nostalgia, my father recalled some unique details from my childhood that helped me accept a part of myself; the part that flits between projects, passions, and is forever relentlessly curious about everything.</p>
 
