--- a/references/memes.html
+++ b/references/memes.html
@@ -41,11 +41,13 @@
 <body>
   <h1>Meme References</h1>
 
-  <p>A collection of memes that I want to embed into my site.</p>
+  <p>A collection of memes referenced in my site.</p>
 
   <div class="meme-gallery">
     <!-- Images inside references/memes/ -->
+    <h1>The crying kittie</h1>
     <img src="memes/meme1.png" alt="Meme 1">
+    <h2>The laughing pup</h2>
     <img src="memes/meme2.jpg" alt="Meme 2">
     <img src="memes/meme3.png" alt="Meme 3">
   </div>
