--- a/references/memes.html
+++ b/references/memes.html
@@ -46,7 +46,7 @@
   <div class="meme-gallery">
     <!-- Images inside references/memes/ -->
     <h1>The crying kittie</h1>
-    <img src="memes/meme1.png" alt="Meme 1">
+    <img src="meme1.png" alt="Meme 1">
     <h2>The laughing pup</h2>
     <img src="memes/meme2.jpg" alt="Meme 2">
     <img src="memes/meme3.png" alt="Meme 3">
