--- a/references/memes.html
+++ b/references/memes.html
@@ -45,11 +45,8 @@
 
   <div class="meme-gallery">
     <!-- Images inside references/memes/ -->
-    <h1>The crying kittie</h1>
-    <img src="meme1.png" alt="Meme 1">
-    <h2>The laughing pup</h2>
-    <img src="memes/meme2.jpg" alt="Meme 2">
-    <img src="memes/meme3.png" alt="Meme 3">
+    <p><h1>The crying kittie</h1>
+    <img src="meme1.png" alt="The crying kittie"></p>
   </div>
 
   <footer>
