--- a/references/memes.html
+++ b/references/memes.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell/nutshell.js"></script>
   <title>Meme References</title>
   <style>
     body {
@@ -45,8 +46,8 @@
 
   <div class="meme-gallery">
     <!-- Images inside references/memes/ -->
-    <p><h1>The crying kittie</h1>
-    <img src="meme1.png" alt="The crying kittie"></p>
+    <h1>The crying kittie</h1>
+    <img src="meme1.png" alt="The crying kittie">
   </div>
 
   <footer>
