--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <p>My father’s passion project was called <strong></strong><em>jnanatutorials</em></strong>. This is mine: <strong>jnanaexperiments</strong>.</p>
 
-      <p>Happy reading, fellow atoms. I hope it sparks a little joy and a lot of wonder. Thank you for your attention.</p>
+      <p>Happy reading, fellow atoms. Thank you for your attention.</p>
   </main>
 
   <footer>
