--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <p>So, I probably dissapointed him one too many times on that front, atleast at that time. Recently, we met one of his students randomly at a restaurant, and he praised my father’s excellent oratory skills. Amidst nostalgia, my father recalled some unique details from my childhood that helped me accept a part of myself; the part that flits between projects, passions, and is forever relentlessly curious about everything.</p>
 
-      <p>My father’s passion project was called <strong></strong><em>jnanatutorials</em></strong>. This is mine: <strong>jnanaexperiments</strong>.</p>
+      <p>My father’s passion project was called <strong><em>jnanatutorials</em></strong>. This is mine: <strong>jnanaexperiments</strong>.</p>
 
       <p>Happy reading, fellow atoms. Thank you for your attention.</p>
   </main>
